# netflix

./: .gitignore  Makefile  README.md  pyproject.toml
netflix/: __init__.py  __main__.py  cli.py  netflix.py
tests/: test_basecli.py  test_cli.py  test_netflix.py
tests/expected/: file1.txt
tests/input/: file1.csv  file2.csv  file3.csv
tests/output/: file1.txt  file2.txt  file3.txt
