[project]
name = "rlane-netflix"
version = "1.0.9"
description = "Netflix history report"
authors = [
    {name = "Russel Lane", email = "russel@rlane.com"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["netflix", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.10"
dependencies = [
    "rlane-libcli>=1.0.12",
]

[project.urls]
Homepage = "https://github.com/russellane/netflix"

[project.scripts]
netflix = 'netflix.cli:main'

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.6.9",
]

[tool.coverage.run]
omit = ["netflix/__main__.py"]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
strict = true

[tool.ruff]
line-length = 97

[tool.ruff.lint]
select = [
    # pyflakes: undefined names, unused imports, redefined variables
    "F",
    # pycodestyle: PEP 8 style errors
    "E",
    # pycodestyle: PEP 8 style warnings
    "W",
    # flake8-bugbear: likely bugs and design problems
    "B",
    # pydocstyle: docstring style and completeness (google convention)
    "D",
    # pylint: errors, warnings, refactoring hints, conventions
    "PL",
    # flake8-pytest-style: pytest usage best practices
    "PT",
    # flake8-simplify: code patterns that can be simplified
    "SIM",
    # isort: import sorting and grouping
    "I",
]
ignore = [
    # formatter: whitespace before ':'
    "E203",
    # pydocstyle: missing docstring in magic method
    "D105",
    # pydocstyle: no blank lines allowed after function docstring
    "D202",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # pydocstyle: skip all docstring checks
    "D",
    # pylint convention: skip convention checks
    "PLC",
    # pylint: magic value used in comparison
    "PLR2004",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# vim: set ts=4 sw=4 et:
